--- a/SportsStore/SportsStore/bower.json
+++ b/SportsStore/SportsStore/bower.json
@@ -1,5 +1,8 @@
 {
   "name": "asp.net",
   "private": true,
-  "dependencies": {"bootstrap": "4.1.3"}
+  "dependencies": {
+    "bootstrap": "4.1.3",
+    "fontawesome": "5.5.0"
+  }
 }
